Table User {
  id serial [pk]
  name varchar
  surname varchar
  age int
  username varchar
  email varchar
  password varchar
  created_at timestamp
}

Table Book {
  isbn serial [pk]
  title varchar
  description varchar
  author varchar
  year int
  price float
  payment_required boolean
}

Table Reservation {
  code serial [pk]
  user_id int [ref: > User.id]
  status varchar
}

Table CreditCard {
  cardNumber varchar [pk]
  cardType varchar
  cardExpirationDate varchar
  cardSecurityCode varchar
  user_id int [ref: > User.id]
}

Table PayPal {
  uniqueCode serial [pk]
  accountEmail varchar
  accountPassword varchar
  user_id int [ref: > User.id]
}
